Add form submission features and fixed some scaling size issues

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         <div class="banner-overlay">
             <div class="banner-background"> </div>
             <img id="banner" src="images/odin-lined.png" alt="Banner" class="banner-image">
-            <p
-                style="font-family: Norse Bold; font-size: 100px; font-weight: 600; color: white; opacity: 1; z-index: 2;">
+            <p style="font-family: Norse Bold; font-size: 4em; font-weight: 600; color: white; opacity: 1; z-index: 2;">
                 ODIN </p>
         </div>
     </div>
@@ -62,7 +61,7 @@
                 </div>
             </div>
 
-            <button type="submit">Submit</button>
+            <button id="createAccount" type="submit">Create Account</button>
         </form>
 
     </div>
