Changed colors and fixed bottom of white space

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
             </div>
 
             <button id="createAccount" type="submit">Create Account</button>
-        </form>
 
+            <p class="logIn"> Already have an account? <a href="https://example.com" class="text-button">Log In</a>
+            </p>
+
+        </form>
     </div>
 
     <div class="blackSpace"></div>
